# nous

./: .env.example  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  flake.nix  install.sh
.cargo/: audit.toml
.github/workflows/: android.yml  ci.yml  desktop.yml  homebrew.yml  ios.yml  release.yml
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/desktop/: shell.nix
apps/desktop/src/: app.js  index.html  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/ios/: Package.swift
apps/ios/NousTests/: IdentityTests.swift
apps/web/: .env.local.example  eslint.config.mjs  package-lock.json  package.json
apps/web/public/wasm/: nous_wasm.d.ts  nous_wasm.js
apps/web/src/__tests__/: activity-timeline.test.tsx  ai-page.test.tsx  api.test.ts  architecture-diagram.test.tsx  avatar.test.tsx  changelog.test.tsx  command-palette.test.tsx  connection-status.test.tsx  dashboard.test.tsx  download.test.tsx  empty-state.test.tsx  faq.test.tsx  files.test.tsx  governance.test.tsx  identity.test.tsx  keyboard-shortcuts.test.tsx  marketplace.test.tsx  messages.test.tsx  nav-badge.test.tsx  network.test.tsx  notification-panel.test.tsx  offline-state.test.tsx  onboarding.test.tsx  page-header.test.tsx  product-tour.test.tsx  roadmap.test.tsx  setup.ts  (+10 more)
crates/nous-ai/: Cargo.toml
crates/nous-ai/src/: agent.rs  chunking.rs  conversation.rs  embedding.rs  executor.rs  hnsw.rs  http_backend.rs  knowledge.rs  lib.rs  pipeline.rs  prompt.rs  rag.rs  search.rs
crates/nous-api/: Cargo.toml  build.rs
crates/nous-api/proto/: nous.proto
crates/nous-api/src/: ai.rs  config.rs  error.rs  files.rs  governance.rs  graphql.rs  grpc.rs  identity.rs  lib.rs  main.rs  marketplace.rs  messaging.rs  middleware.rs  nostr.rs  openapi.rs  payments.rs  realtime.rs  routes.rs  state.rs  sybil.rs
crates/nous-bench/: Cargo.toml
crates/nous-bench/benches/: ai_bench.rs  browser_bench.rs  crypto_bench.rs  files_bench.rs  marketplace_bench.rs  messaging_bench.rs  net_bench.rs  payments_bench.rs  storage_bench.rs
crates/nous-bench/src/: lib.rs
crates/nous-browser/: Cargo.toml
crates/nous-browser/src/: bookmarks.rs  config.rs  content_filter.rs  csp.rs  ens.rs  gateway.rs  history.rs  identity_switch.rs  lib.rs  mock_gateway.rs  resolver.rs  tab.rs
crates/nous-cli/: Cargo.toml
crates/nous-cli/src/: commands.rs  config.rs  executor.rs  lib.rs  main.rs  output.rs
crates/nous-core/: Cargo.toml
crates/nous-core/src/: audit.rs  capability.rs  config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/nous-crypto/: Cargo.toml
crates/nous-crypto/src/: encryption.rs  keys.rs  lib.rs  signing.rs  threshold.rs  zkp.rs
crates/nous-files/: Cargo.toml
crates/nous-files/src/: chunk.rs  disk.rs  lib.rs  manifest.rs  share.rs  store.rs  sync.rs  vault.rs
crates/nous-governance/: Cargo.toml
crates/nous-governance/src/: analytics.rs  dao.rs  delegation.rs  execution.rs  lib.rs  proposal.rs  sybil.rs  treasury.rs  vote.rs  zkvote.rs
crates/nous-identity/: Cargo.toml
crates/nous-identity/src/: credential.rs  did.rs  disclosure.rs  lib.rs  recovery.rs  reputation.rs  resolver.rs
crates/nous-integration/: Cargo.toml
crates/nous-integration/src/: lib.rs
crates/nous-marketplace/: Cargo.toml
crates/nous-marketplace/src/: dispute.rs  lib.rs  listing.rs  offer.rs  order.rs  review.rs  search.rs
crates/nous-messaging/: Cargo.toml
crates/nous-messaging/src/: attachment.rs  channel.rs  ephemeral.rs  group.rs  group_session.rs  lib.rs  mention.rs  message.rs  presence.rs  ratchet.rs  receipt.rs  sender_key.rs  session.rs  store.rs  x3dh.rs
crates/nous-net/: Cargo.toml
crates/nous-net/src/: bandwidth.rs  behaviour.rs  connection_manager.rs  discovery.rs  events.rs  gossip.rs  lib.rs  nat.rs  node.rs  peer_store.rs  protocol.rs  rate_limit.rs  signing.rs  topics.rs
crates/nous-node/: Cargo.toml
crates/nous-node/src/: gossip_bridge.rs  health.rs  lib.rs  plugin.rs  rate_limit.rs  routing.rs
crates/nous-nostr/: Cargo.toml
crates/nous-nostr/src/: event.rs  filter.rs  lib.rs  message.rs  nip04.rs  relay.rs  server.rs  store.rs  subscription.rs
crates/nous-payments/: Cargo.toml
crates/nous-payments/src/: chain.rs  channel.rs  escrow.rs  executor.rs  history.rs  invoice.rs  lib.rs  mint.rs  stream.rs  swap.rs  wallet.rs
crates/nous-payments/tests/: pouw_integration.rs
crates/nous-pouw/: Cargo.toml
crates/nous-pouw/benches/: round_throughput.rs
crates/nous-pouw/examples/: devnet.rs  node.rs  pouw_cli.rs
crates/nous-pouw/scripts/: demo.sh
crates/nous-pouw/src/: bft.rs  block.rs  engine.rs  envelope.rs  lib.rs  mempool.rs  mint.rs  network.rs  node.rs  quorum.rs  receipt.rs  rpc.rs  selection.rs  slashing.rs  state.rs  store.rs  tx.rs
crates/nous-pouw/src/net/: gossip.rs  mod.rs  task.rs
crates/nous-pouw/src/sim/: byzantine.rs  harness.rs  mod.rs  multinode.rs
crates/nous-pouw/tests/: byzantine.rs  fees.rs  happy_path.rs  multi_process.rs  net.rs  node_e2e.rs  persistence_recovery.rs  property.proptest-regressions  property.rs  replay.rs  rpc.rs  slashing.rs  store.rs  sybil.rs  warmup.rs
crates/nous-social/: Cargo.toml
crates/nous-social/src/: event.rs  feed.rs  follow.rs  interaction.rs  lib.rs  moderation.rs  notification.rs  post.rs  profile.rs  thread.rs
crates/nous-storage/: Cargo.toml
crates/nous-storage/src/: crdt.rs  kv.rs  lib.rs  merkle.rs  sqlite.rs  vault.rs
crates/nous-terminal/: Cargo.toml
crates/nous-terminal/src/: command.rs  completion.rs  editor.rs  history.rs  keybind.rs  lib.rs  prompt.rs  pty.rs  render.rs  repl.rs  vt.rs
crates/nous-tui/: Cargo.toml
crates/nous-tui/src/: app.rs  client.rs  config.rs  input.rs  lib.rs  poll.rs  runner.rs  tabs.rs  terminal_panel.rs  theme.rs  views.rs  widgets.rs
crates/nous-wasm/: Cargo.toml
crates/nous-wasm/src/: content.rs  crdt.rs  lib.rs  messaging.rs
docs/: ARCHITECTURE.md
packaging/homebrew/: nous.rb
packaging/npm/: install.js  package.json
(+118 files in other folders)
