[package]
name = "nous-api"
description = "API server — REST + GraphQL + gRPC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "nous-api"
path = "src/main.rs"

[dependencies]
nous-core = { path = "../nous-core" }
nous-crypto = { path = "../nous-crypto" }
nous-identity = { path = "../nous-identity" }
nous-messaging = { path = "../nous-messaging" }
nous-governance = { path = "../nous-governance" }
nous-social = { path = "../nous-social" }
nous-storage = { path = "../nous-storage" }
nous-nostr = { path = "../nous-nostr" }
nous-files = { path = "../nous-files" }
nous-marketplace = { path = "../nous-marketplace" }
base64 = { workspace = true }
axum = { version = "0.8", features = ["json", "query"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-graphql = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
utoipa = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
