[package]
name = "nous-bench"
description = "Criterion benchmarks for Nous hot paths"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nous-crypto = { path = "../nous-crypto" }
nous-identity = { path = "../nous-identity" }
nous-files = { path = "../nous-files" }
nous-governance = { path = "../nous-governance" }
nous-marketplace = { path = "../nous-marketplace" }
nous-browser = { path = "../nous-browser" }
nous-ai = { path = "../nous-ai" }
nous-net = { path = "../nous-net" }
nous-messaging = { path = "../nous-messaging" }
nous-payments = { path = "../nous-payments" }
nous-storage = { path = "../nous-storage" }
rand = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true }
x25519-dalek = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "files_bench"
harness = false

[[bench]]
name = "marketplace_bench"
harness = false

[[bench]]
name = "browser_bench"
harness = false

[[bench]]
name = "ai_bench"
harness = false

[[bench]]
name = "net_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "messaging_bench"
harness = false

[[bench]]
name = "payments_bench"
harness = false
