[package]
name = "nous-browser"
description = "Decentralized web browser — IPFS gateway, ENS, dApp browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nous-core = { path = "../nous-core" }
nous-identity = { path = "../nous-identity" }
nous-net = { path = "../nous-net" }
nous-storage = { path = "../nous-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
