[package]
name = "nous-cli"
description = "Command-line interface for Nous"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nous-core = { path = "../nous-core" }
nous-crypto = { path = "../nous-crypto" }
nous-identity = { path = "../nous-identity" }
nous-messaging = { path = "../nous-messaging" }
nous-storage = { path = "../nous-storage" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
