[package]
name = "nous-cli"
description = "Command-line interface for Nous"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "nous"
path = "src/main.rs"

[dependencies]
nous-core = { path = "../nous-core" }
nous-crypto = { path = "../nous-crypto" }
nous-identity = { path = "../nous-identity" }
nous-messaging = { path = "../nous-messaging" }
nous-storage = { path = "../nous-storage" }
nous-social = { path = "../nous-social" }
nous-payments = { path = "../nous-payments" }
nous-net = { path = "../nous-net" }
nous-governance = { path = "../nous-governance" }
nous-terminal = { path = "../nous-terminal" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }

[dev-dependencies]
tempfile = { workspace = true }
