[package]
name = "nous-crypto"
description = "Cryptographic primitives for Nous — signing, encryption, key derivation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nous-core = { path = "../nous-core" }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
zeroize = { workspace = true }
argon2 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
