[package]
name = "nous-files"
description = "Decentralized file storage — encrypted vaults, content addressing, versioning, shared folders"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nous-core = { path = "../nous-core" }
nous-crypto = { path = "../nous-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
hkdf = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
