[package]
name = "nous-tui"
description = "Terminal interface for Nous — ratatui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nous-core = { path = "../nous-core" }
nous-identity = { path = "../nous-identity" }
nous-messaging = { path = "../nous-messaging" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
