[package]
name = "nous-tui"
description = "Terminal interface for Nous — ratatui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nous-core = { path = "../nous-core" }
nous-identity = { path = "../nous-identity" }
nous-messaging = { path = "../nous-messaging" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }
