[package]
name = "nous-wasm"
description = "WebAssembly bindings for Nous cryptographic primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
bs58 = { workspace = true }
zeroize = { workspace = true }
hkdf = { workspace = true }
curve25519-dalek = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
