[package]
name = "nous-desktop"
version = "0.1.0"
description = "Nous — sovereign desktop application"
edition = "2024"
license = "MIT"
authors = ["Teddy Tennant <teddytennant@icloud.com>"]

[lib]
name = "nous_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "nous-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
nous-terminal = { path = "../../../crates/nous-terminal" }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
